<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="26dp"
    android:paddingVertical="18dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/colorPickerDialog_red"
            android:textAllCaps="true"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/red"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:max="255"
            android:progress="0"
            android:progressBackgroundTint="@null"
            android:progressTint="@null"
            android:secondaryProgressTint="@null"
            android:theme="@style/Widget.AppCompat.SeekBar"
            android:thumb="@drawable/color_picker_thumb" />

        <TextView
            android:id="@+id/redInt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="none"
            android:gravity="end"
            android:singleLine="true"
            android:text="0"
            android:textAllCaps="true"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/colorPickerDialog_green"
            android:textAllCaps="true"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/green"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:max="255"
            android:progress="0"
            android:progressBackgroundTint="@null"
            android:progressTint="@null"
            android:secondaryProgressTint="@null"
            android:theme="@style/Widget.AppCompat.SeekBar"
            android:thumb="@drawable/color_picker_thumb" />

        <TextView
            android:id="@+id/greenInt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="none"
            android:gravity="end"
            android:singleLine="true"
            android:text="0"
            android:textAllCaps="true"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/colorPickerDialog_blue"
            android:textAllCaps="true"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/blue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:max="255"
            android:progress="0"
            android:progressBackgroundTint="@null"
            android:progressTint="@null"
            android:secondaryProgressTint="@null"
            android:theme="@style/Widget.AppCompat.SeekBar"
            android:thumb="@drawable/color_picker_thumb" />

        <TextView
            android:id="@+id/blueInt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="none"
            android:gravity="end"
            android:singleLine="true"
            android:text="0"
            android:textAllCaps="true"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/alphaLayout"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/colorPickerDialog_alpha"
            android:textAllCaps="true"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/alpha"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:max="255"
            android:progress="255"
            android:theme="@style/Widget.AppCompat.SeekBar" />

        <TextView
            android:id="@+id/alphaInt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="none"
            android:gravity="end"
            android:singleLine="true"
            android:text="1.00"
            android:textAllCaps="true"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>